--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -1,111 +1,84 @@
 .lesson-card {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    /* border-radius: 0 0 20px 20px; */
     border-radius: 20px;
     border-width: 3px;
     border-color: black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, spread radius, color */
-    transition: 0.3s; /* Optional: adds a transition effect when the shadow changes */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s; 
     background-color: rgb(0, 0, 0);
     height: 100%;
   }
 
-  .lesson-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  }
+.lesson-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
 
-  .card-img-top {
-    height:200px
-  }
+.card-img-top {
+  height:200px
+}
 
-  .unit-img {
-    border-radius: 20px 20px 0px 0px;
-  }
+.unit-img {
+  border-radius: 20px 20px 0px 0px;
+}
   
-  .settings-link {
-    color: #fff;
-  }
+.settings-link {
+  color: #fff;
+}
 
-  .nav-link {
-    font-size:22px;
-    margin-left:35px;
-
-  }
+.nav-link {
+  font-size:22px;
+  margin-left:35px;
+}
   
- 
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
   
-
-  .navbar-brand {
-    display: flex;
-    align-items: center;
-  }
+.navbar-brand img {
+  margin-right: 8px;
+}
   
-  .navbar-brand img {
-    margin-right: 8px; /* Adjust the space between the image and text as needed */
-  }
-  
-  .navbar-brand h1 {
-    margin-bottom: 0; /* Removes the bottom margin from h1 */
-  }
-  
+.navbar-brand h1 {
+  margin-bottom: 0; 
+}
 
-
-
-
-  /* body, html {
-    min-height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #33A251, #BB4B3C); 
-  } */
-
-      /* This styles the dropdown background */
 .navbar .dropdown-menu {
-  background-color: black; /* Sets the dropdown background to black */
+  background-color: black;
   font-size: 22px;
 }
 
-/* This styles each dropdown item */
 .navbar .dropdown-menu .dropdown-item {
-  color: white; /* Sets the dropdown item text color to white */
+  color: white; 
 }
 
-/* This styles the dropdown item on hover */
 .navbar .dropdown-menu .dropdown-item:hover {
-  background-color: yellow; /* Sets the dropdown item background to yellow on hover */
-  color: black; /* Sets the dropdown item text color to black on hover */
+  background-color: yellow;
+  color: black;
 }
   
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
-  body {
-    background: linear-gradient(to right, #33A251, #BB4B3C); /* Start and end colors of the gradient */
-    background-attachment: fixed; /* Fix the background to the viewport */
-    background-repeat: no-repeat; /* Do not repeat the background */
-    background-size: cover; /* Cover the entire page */
-  }
+body {
+  background: linear-gradient(to right, #33A251, #BB4B3C); 
+  background-attachment: fixed; 
+  background-repeat: no-repeat;
+  background-size: cover; 
+}
 
-  .twitter-container {
-    /* max-height: 100vh; Viewport Height */
-    overflow-y: auto; /* Enable vertical scrolling */
-    margin-bottom: 50px;
-    height: 580px;
-
+.twitter-container {
+  overflow-y: auto; 
+  margin-bottom: 50px;
+  height: 580px;
 }
 
 .card-title {
   color: white;
 }
-
-/* .card-body {
-  background-color: black;,
-  border-radius: 0 0 20px 20px;
-} */
   
 .calendar th, .calendar td {
   padding: 0px;
@@ -123,43 +96,35 @@
 .calendar td.logged-in {
   background-color: #66df66;
   border: 2px solid black;
-  /* font-weight: bold; */
 }
 
 .calendar {
   background-color: #e9e4c2;
   margin-bottom: 0px;
-  padding-left: 0; /* Reset left padding */
-  padding-right: 0; /* Reset right padding */
+  padding-left: 0; 
+  padding-right: 0; 
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
   border-radius: 15px; 
   width: 120%;
-  
 }
 
 @media (min-width: 768px) {
   .calendar {
-    padding-left: 1rem; /* Adjust left padding on larger screens if needed */
-    padding-right: 1rem; /* Adjust right padding on larger screens if needed */
+    padding-left: 1rem;
+    padding-right: 1rem; 
   }
 }
 
 .weather-widget {
   background: linear-gradient(to left, #6dd5ed, #19829c);
-  /* background-color: #f2edcb; */
   color: black;
   border-radius: 20px;
   border-width: 3px;
   border-color: black;
-  /* height: 15%; */
   width: 120%;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
   height: 250px;
 }
-
-/* .weather-widget:hover{
-  box-shadow: inset 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-} */
 
 #calendar-container {
   border-radius: 15px; 
@@ -170,29 +135,23 @@
   overflow-x: auto;
 }
 
-
-
 .calendar {
-  border-collapse: collapse; /* Ensures the borders between cells are merged */
-  width: 100%; /* Adjust based on your layout */
+  border-collapse: collapse; 
+  width: 100%;
 }
 
-/* Add a bottom border to the last cell of the first row */
 .calendar thead tr:first-child th:last-child {
   border-bottom: 2px solid #000;
 }
 
-/* Add a top border to the first cell of the second row */
 .calendar thead tr:nth-child(2) th:first-child {
   border-top: 2px solid #000;
 }
 
-/* Extend the top border across all cells of the second row */
 .calendar thead tr:nth-child(2) th {
   border-top: 2px solid #000;
 }
 
-/* Adds a bottom border to the entire thead section */
 .calendar thead {
   border-bottom: 2px solid #000;
 }
@@ -200,7 +159,7 @@
 .calendar th, .calendar td {
   text-align: center;
   padding: 10px;
-  border: none; /* Removes individual cell borders */
+  border: none;
 }
 
 .calendar th {
@@ -216,12 +175,12 @@
 #loginCalendar tbody td {
   text-align: center;
   padding: 0.5rem;
-  overflow: hidden; /* Prevent text from overflowing */
-  white-space: nowrap; /* Keep the content on a single line */
+  overflow: hidden;
+  white-space: nowrap; 
 }
 
 #prevMonth, #nextMonth {
-  padding: 0.25rem 0.5rem; /* Adjust as necessary */
+  padding: 0.25rem 0.5rem;
   box-shadow: inset 0px 0px 3px 0px black;
   font-weight: bold;
   background-color: #d1dad3;
@@ -232,7 +191,7 @@
 }
 
 #monthYear {
-  margin: 0 20px; /* Adjust spacing around the month and year display */
+  margin: 0 20px; 
 }
 
 #monthYear {
@@ -241,78 +200,60 @@
   white-space: nowrap; 
 }
 
-/* Ensure buttons do not stretch beyond the table's width */
 .calendar button {
   max-width: none;
 }
-
-
-
-
-
   
-  /* Ensure that all parent elements of your content also stretch to the full height */
-  .container {
-    min-height: 100%;
-    /* Other styles for your container */
-  }
-
-  .navbar.bg-black {
-    background-color: black !important; /* Using !important to override any existing Bootstrap styles */
-  }
-  
-  /* Change the text color for the active nav item to yellow */
-  .navbar .nav-link.active-tab, .navbar .nav-link.active {
-    color: yellow !important; /* Using !important to override any existing Bootstrap styles */
-    background-color: transparent !important; /* Ensure the background is transparent */
-  }
-  
-  /* Optional: Change hover and focus styles for nav links */
-  .navbar .nav-link:hover, .navbar .nav-link:focus {
-    color: yellow; /* Change text color to yellow on hover/focus */
-    background-color: transparent; /* Ensure the background is transparent on hover/focus */
-  }
-  /* Add more custom styles as needed */
-
-  /* #navbarNav {
-    height: 70px;
-  } */
-
-  #navbarUL {
-    margin-left: 60px;
-  }
-
-  
-/* New styles for the brand name */
-.text-green {
-    color: green;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    text-shadow: rgb(233, 225, 183) 1px 1px
-  }
-  
-  .text-red {
-    color: red;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    text-shadow: rgb(233, 225, 183) 1px 1px
-  }
-  
-  /* Ensure that the navbar brand has no text decoration to remove the underline from the anchor tag */
-  .navbar-brand {
-    text-decoration: none;
-  }
-
-  .quiz-img {
-    height: 200px; /* Adjust the height as needed *//* This helps to preserve the aspect ratio */
+.container {
+  min-height: 100%;
 }
 
+.navbar.bg-black {
+  background-color: black !important; 
+}
+  
+.navbar .nav-link.active-tab, .navbar .nav-link.active {
+  color: yellow !important;
+  background-color: transparent !important;
+}
+  
+.navbar .nav-link:hover, .navbar .nav-link:focus {
+  color: yellow; 
+  background-color: transparent; 
+}
+
+#navbarUL {
+  margin-left: 60px;
+}
+
+.text-green {
+  color: green;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-shadow: rgb(233, 225, 183) 1px 1px
+}
+
+.text-red {
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  text-shadow: rgb(233, 225, 183) 1px 1px
+}
+
+.navbar-brand {
+  text-decoration: none;
+}
+
+.quiz-img {
+  height: 200px;
+  }
+
 .quiz-container {
-    border-radius: 30px;
-    box-shadow: 3px 2px 1px 2px;
-    background-color: #f2edcb;
-    margin-top: 65px;
-    border: 3px solid black;
+  border-radius: 30px;
+  box-shadow: 3px 2px 1px 2px;
+  background-color: #f2edcb;
+  margin-top: 65px;
+  border: 3px solid black;
   
 }
 
@@ -378,13 +319,10 @@
   
 }
 
-
-
 .mcq_option {
   border-radius: 5px;
   border: 2px solid black;
   box-shadow: inset 0px 0px 2.5px 0px black;
-  /* box-shadow: #000 0px 0px 5px 0px; */
 }
 
 .vocab-card {
@@ -393,7 +331,6 @@
   background-color: #f2edcb;
   margin-top: 30px;
   border: 3px solid black;
-
 }
 
 .analytics-card {
@@ -402,7 +339,6 @@
   background-color: #f2edcb;
   margin-top: 30px;
   border: 3px solid black;
-
 }
 
 .diacritics-card {
@@ -411,7 +347,6 @@
   background-color: #f2edcb;
   margin-top: 30px;
   border: 3px solid black;
-
 }
 
 .settings-card {
@@ -420,7 +355,6 @@
   background-color: #f2edcb;
   margin-top: 30px;
   border: 3px solid black;
-
 }
 
 #searchQueryOverall {
@@ -440,7 +374,6 @@
   box-shadow: inset 0px 0px 5px 0px black;
 }
 
-
 .mcq-option {
   margin: 10px;
 }
@@ -448,7 +381,6 @@
 .page-item {
   border: 1px solid rgb(0, 0, 0);
   box-shadow: 0px 0px 4px 0px;
-
 }
 
 .numbering {
@@ -474,7 +406,6 @@
   font-size: 24px;
   margin-left: 5px;
 }
-
 
 #discordLogo {
   color: #cab2fb;
