--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Register - PortuguesePro</title>
+<title>PortuPro - Registration</title>
 <link rel="stylesheet" href="{% static 'dashboard.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -14,62 +14,34 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <style>
   body {
-    background: linear-gradient(to right, #33A251, #BB4B3C); /* Start and end colors of the gradient */
-    background-attachment: fixed; /* Fix the background to the viewport */
-    background-repeat: no-repeat; /* Do not repeat the background */
-    background-size: cover; /* Cover the entire page */
-  }
-  .registration-container {
-    max-width: 600px;
-    margin: 20px auto;
-    background: white;
-    padding: 20px;
-    border-radius: 30px;
-    box-shadow: 10px 10px 5px 5px;
-    background-color: #f2edcb;
-  }
-  .registration-container h1 {
-    text-align: center;
-    color: #333;
-  }
-  .registration-container img {
-    display: block;
-    margin: 10px auto;
-  }
-  .btn-primary {
-    background-color: #D32F2F;
-    border-color: #D32F2F;
+    background: linear-gradient(to right, #33A251, #BB4B3C);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
-  .form-group {
-    position: relative;
-  }
+  .registration-container { max-width: 600px; margin: 20px auto; background: white; padding: 20px; border-radius: 30px; box-shadow: 10px 10px 5px 5px; background-color: #f2edcb; }
+  
+  .registration-container h1 { text-align: center; color: #333; }
+  
+  .registration-container img { display: block; margin: 10px auto; }
+  
+  .btn-primary { background-color: #D32F2F; border-color: #D32F2F; }
 
-  #togglePassword, #togglePassword2 {
-        cursor: pointer;
-    }
+  .form-group { position: relative; }
+
+  #togglePassword, #togglePassword2 { cursor: pointer; }
 </style>
 </head>
 <body>
-
 <div class="registration-container">
   <a href="/signin" class="text-secondary"><b>&larr; Login</b></a>
   <img src="{% static 'Small Logo for Centre.png' %}" class="mb-4" alt="Portuguese Flag" style="width: 215px; height: 215px;"> <!-- Adjust size as needed -->
   <p class="text-center">A Portuguese language learning website to help you sharpen and develop your Portuguese.<br> 
     <span style="font-weight: bold;"> Enter your details to register for an account below.</span></p>
-  
+  <!-- Registration Fields form -->
   <form id="signup-form" method="post">
     {% csrf_token %}
-    <!-- <div class="form-group">
-        <label for="inputUsername">Username</label>
-        <input type="username" name="username" id="inputUsername" class="form-control" placeholder="Username..." required autofocus>
-      </div>
-    
-    <div class="form-group">
-      <label for="inputEmail">Email</label>
-      <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email..." value="{{ form_data.email|default_if_none:'' }}" required autofocus>
-    </div> -->
-
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputUsername"><b>Username</b></label>
@@ -81,7 +53,6 @@
         <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email..." value="{{ form_data.email|default_if_none:'' }}" required>
       </div>
     </div>
-
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputUsername"><b>First Name</b></label>
@@ -93,7 +64,6 @@
         <input type="text" name="last_name" id="lastName" class="form-control" placeholder="Last Name...." required>
       </div>
     </div>
-
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputPassword"><b>Password</b></label>
@@ -105,12 +75,8 @@
             </span>
           </div>
         </div>
-        <!-- <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required> -->
       </div>
-
       <div class="form-group col-md-6">
-        <!-- <label for="inputPasswordConfirm"><b>Re-Enter Password</b></label>
-        <input type="password" name="passwordConfirm" id="inputPasswordConfirm" class="form-control" placeholder="Re-Enter Password" required> -->
         <label for="inputPasswordConfirm"><b>Re-enter Password</b></label>
         <div class="input-group" id="inputPasswordtotal">
           <input type="password" name="passwordConfirm" id="inputPasswordConfirm" class="form-control" placeholder="Re-enter Password" required>
@@ -122,32 +88,16 @@
         </div>
       </div>
     </div>
-
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="dailyMinutesGoal"><b>Minutes per Day Goal</b></label>
         <input type="number" name="dailyMinutesGoal" id="dailyMinutesGoal" class="form-control" placeholder="Minutes/day...." required>
       </div>
-
       <div class="form-group col-md-6">
         <label for="dailyQuestionsGoal"><b>Questions per Day Goal</b></label>
         <input type="number" name="dailyQuestionsGoal" id="dailyQuestionsGoal" class="form-control" placeholder="Questions/day...." required>
       </div>
     </div>
-
-    <!-- <div class="form-group">
-        <label for="studyFrequency"><b>Activity Goals</b></label>
-        <div class="input-group">
-          <input type="number" name="studyFrequency" id="studyFrequency" class="form-control" placeholder="Number" aria-label="Study frequency number">
-          <div class="input-group-append">
-            <select class="custom-select" name="frequencyUnit" id="frequencyUnit">
-              <option value="Daily" selected>hours per day</option>
-              <option value="Weekly">hours per week</option>
-            </select>
-          </div>
-        </div>
-      </div> -->
-
     <div class="form-row">
     <fieldset class="form-group col-md-6">
       <legend class="col-form-label pt-0"><b>Proficiency Level</b></legend>
@@ -170,7 +120,6 @@
         </label>
       </div>
     </fieldset>
-
     <div class="form-group">
       <label for="siteLanguage"><b>Default Site Language to</b>
           <a href="#" data-toggle="tooltip" data-placement="right" title="This affects mainly the Culture pages of the website.">
@@ -181,12 +130,10 @@
           <option value="English">English</option>
           <option value="Portuguese">Portuguese</option>
       </select>
-  </div>
     </div>
-
-    <button type="submit" class="btn btn-primary btn-block">Submit</button>
-    
-  </form>
+  </div>
+  <button type="submit" class="btn btn-primary btn-block">Submit</button>
+</form>
 </div>
 {% if messages %}
 <script type="text/javascript">
@@ -195,25 +142,21 @@
         let messageText = "{% for message in messages %}{{ message }}\n{% endfor %}";
         alert(messageText);  // Use a simple alert for demonstration
     }
-
-
 </script>
 {% endif %}
-
 <div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 11">
   <div id="errorToast" class="toast align-items-center text-white bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
     <div class="d-flex">
       <div class="toast-body">
-        <!-- Error messages will go here -->
+        <!-- Error messages for registration will go here -->
       </div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
   </div>
 </div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script>
+    // Show/Hide passowrd functionality
     function togglePasswordVisibility(element_id, icon_id) {
         var passwordInput = document.getElementById(element_id);
         var togglePasswordIcon = document.getElementById(icon_id);
@@ -227,53 +170,46 @@
             togglePasswordIcon.classList.add('fa-eye');
         }
     }
-    
+  
+  // Registration form submission
+  document.getElementById('signup-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      var formData = new FormData(this);
+      // Retrieve the CSRF token from the form
+      var csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+      fetch('/signup', {
+          method: 'POST',
+          body: formData,
+          headers: {
+            'X-CSRFToken': csrftoken,
+          }
+      }).then(response => response.json())
+      .then(data => {
+          if(data.status === 'error') {
+              console.log(data.message);
+              console.log("EHFEHHF")
+              const errorToastEl = document.getElementById('errorToast');
+              const errorToastBody = errorToastEl.querySelector('.toast-body');
+              if (Array.isArray(data.message)) {
+                  errorToastBody.innerHTML = data.message.join("<br>");
+              } else {
+                  errorToastBody.innerHTML = data.message;
+              }
+              const errorToast = new bootstrap.Toast(errorToastEl);
+              console.log("Inside here")
+              errorToast.show();
+          } else {
+              alert(data.message);
+              window.location.href = '/signin';
+          }
+      }).catch(error => {
+          console.error('Error:', error);
+      });
+  });
 
-
-document.getElementById('signup-form').addEventListener('submit', function(e) {
-    e.preventDefault();
-    var formData = new FormData(this);
-
-     // Retrieve the CSRF token from the form
-     var csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
-
-
-    fetch('/signup', {
-        method: 'POST',
-        body: formData,
-        headers: {
-          'X-CSRFToken': csrftoken,
-        }
-    }).then(response => response.json())
-    .then(data => {
-        if(data.status === 'error') {
-            console.log(data.message);
-            console.log("EHFEHHF")
-            const errorToastEl = document.getElementById('errorToast');
-            const errorToastBody = errorToastEl.querySelector('.toast-body');
-            // Check if data.message is an array
-            if (Array.isArray(data.message)) {
-                // It's an array, join the elements and set as innerHTML
-                errorToastBody.innerHTML = data.message.join("<br>");
-            } else {
-                // It's not an array, set as innerHTML directly
-                errorToastBody.innerHTML = data.message;
-            }
-            const errorToast = new bootstrap.Toast(errorToastEl);
-            console.log("Inside here")
-            errorToast.show(); // Show the toast
-        } else {
-            alert(data.message);
-            window.location.href = '/signin'; // Redirect to login or another page on success
-        }
-    }).catch(error => {
-        console.error('Error:', error);
-    });
-});
-
-$(document).ready(function(){
-  $('[data-toggle="tooltip"]').tooltip(); // Initialize tooltip
-});
+  $(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+  });
 
 </script>
 </body>
