--- a/templates/mainsite/diacritics.html
+++ b/templates/mainsite/diacritics.html
@@ -111,7 +111,7 @@
               <div class="dropdown-menu" aria-labelledby="cultureDropdown">
                 <a class="dropdown-item" href="/architecture">Architecture</a>
                 <a class="dropdown-item" href="/festivals">Festivals</a>
-                <a class="dropdown-item" href="/home">Media</a>
+                <a class="dropdown-item" href="/media">Music</a>
               </div>
           </li>
           <li class="nav-item">
@@ -126,12 +126,6 @@
           </span>
         </div>
       </nav>
-    <!-- <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portuguese Festivals</title> -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script> -->
     <div class="container mt-4">
         <h1 class="mb-4 header">Diacritics</h1>
         <div class="intro-text" style="margin-bottom: 40px; border: 3px solid black">
@@ -233,14 +227,13 @@
         </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtutlR-5LD8Hzjs2uR1I5Sbku7_aml5pQ&callback=initMap" async defer></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
     {% include 'mainsite/discord_modal.html' %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
+        // Function to convert text to speech
         function convertTextToSpeech(textToSpeak) {
             $.ajax({
                 url: '/text-to-speech/',  // URL to Django view
@@ -248,7 +241,6 @@
                 data: { 'text': textToSpeak },
                 success: function(response) {
                     console.log(response.message);
-                    // Optional: Play the response if it includes audio data
                 },
                 error: function(error) {
                     console.log(error);
