--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -99,27 +99,27 @@
       </div>
     </div>
     <div class="form-row">
-    <fieldset class="form-group col-md-6">
-      <legend class="col-form-label pt-0"><b>Proficiency Level</b></legend>
-      <div class="form-check">
-        <input class="form-check-input" name="beginner_lvl" type="checkbox" name="proficiencyLevel" id="beginner" value="beginner">
-        <label class="form-check-label" for="beginner">
-          Beginner
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" name="intermediate_lvl" type="checkbox" name="proficiencyLevel" id="intermediate" value="intermediate">
-        <label class="form-check-label" for="intermediate">
-          Intermediate
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" name="advanced_lvl" type="checkbox" name="proficiencyLevel" id="advanced" value="advanced">
-        <label class="form-check-label" for="advanced">
-          Advanced
-        </label>
-      </div>
-    </fieldset>
+      <fieldset class="form-group col-md-6">
+        <legend class="col-form-label pt-0"><b>Proficiency Level</b></legend>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="proficiencyLevel" id="beginner" value="beginner">
+          <label class="form-check-label" for="beginner">
+            Beginner
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="proficiencyLevel" id="intermediate" value="intermediate">
+          <label class="form-check-label" for="intermediate">
+            Intermediate
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="proficiencyLevel" id="advanced" value="advanced">
+          <label class="form-check-label" for="advanced">
+            Advanced
+          </label>
+        </div>
+      </fieldset>
     <div class="form-group">
       <label for="siteLanguage"><b>Default Site Language to</b>
           <a href="#" data-toggle="tooltip" data-placement="right" title="This affects mainly the Culture pages of the website.">
